--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin:0;
     padding:0%;
 
+    background-image: -webkit-image-set();
+
 }
 
 /* Add a black background color to the top navigation */
@@ -31,11 +33,19 @@
     background-color: #04AA6D;
     color: white;
   }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+  #footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;   /* Height of the footer */
+    background:#6cf;
+}
 
 body{
-    <p>Convert the image to grayscale:</p>
-
-    <img src="pineapple.jpg" alt="Pineapple" width="300" height="300">
     
-    <p><strong>Note:</strong> The filter property is not supported in Internet Explorer, Edge 12, or Safari 5.1 and earlier.</p>
-}
